test_case/rust-lang_rust/43806_321841660.rs
rust
#![deny(unused_results)]
fn g() {}
fn main() {
    g(); //~ ERROR unused result
}
